--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <main>
-        <h1>Conversor de numeros binarios para decimal</h1>
-        <p><input type="number" id="decimal" autofocus> : <input type="number" id="binario"></p>
+        <h1>Conversor de numeros binario/decimal</h1>
+        <p>Decimal <input type="number" id="decimal" autofocus> : <input type="number" id="binario"> Binario</p>
+        <p>Escreva um numero binario ou decimal.</p>
     </main>
 
     <script src="script.js"></script>
