Conversão correta dos binários para decimais
Concertado o erro de conversão de números binários para decimais

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <h1>Conversor de numeros binario/decimal</h1>
-        <p>Decimal <input type="number" id="decimal" onkeyup="execucao(decimal)"> : <input type="number" id="binario" onkeyup="execucao(binario)"> Binario</p>
+        <p>Decimal <input type="number" id="decimal" onkeyup="execucao(decimal)" value="0"> : <input type="number" id="binario" onkeyup="execucao(binario)" value="0"> Binario</p>
         <p>Escreva um numero binario ou decimal.</p>
     </main>
 
