--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <p>Escreva um numero binario ou decimal.</p>
     </main>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
