Leve mudança nos textos

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Conversor Binario-Decimal</title>
+    <title>Conversor Decimal/Binario</title>
 </head>
 <body>
     <main>
-        <h1>Conversor de numeros binario/decimal</h1>
+        <h1>Conversor de numeros Decimal/Binario</h1>
         <p>Decimal <input type="number" id="decimal" onkeydown="validacao()" onkeyup="execucao(decimal)" value="0"> : <input type="number" id="binario" onkeyup="execucao(binario)" value="0"> Binario</p>
-        <p>Escreva um numero binario ou decimal.</p>
+        <p>Escreva um numero binario ou decimal!</p>
     </main>
 
     <script src="main.js"></script>
