--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <h1>Conversor de numeros Decimal/Binario</h1>
-        <p>Decimal <input type="number" id="decimal" onkeydown="validacao()" onkeyup="execucao(decimal)" value="0"> : <input type="number" id="binario" onkeyup="execucao(binario)" value="0"> Binario</p>
+        <p>Decimal <input type="number" id="decimal" onkeydown="validacao()" value="0"> : <input type="number" id="binario" value="0"> Binario</p>
         <p>Escreva um numero binario ou decimal!</p>
     </main>
 
