--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 <body>
     <main>
         <h1>Conversor de numeros Decimal/Binario</h1>
-        <p>Decimal <input type="number" id="decimal"> : <input type="number" id="binario"> Binario</p>
-        <p>Escreva um numero binario ou decimal!</p>
+        <p id="centralizar">Decimal <input type="number" id="decimal"> : <input type="number" id="binario"> Binario</p>
+        <h2>Instruções</h2>
+        <ul>
+            <li>Ao preencher qualquer um dos campos, o outro será atualizado instantaneamente</li>
+            <li>Preencha o campo de numeros binarios apenas com os valores 0 e 1</li>
+            <li>Não use simbulos nem letras</li>            
+        </ul>
     </main>
 
     <script src="main.js"></script>
